[package]
name = "lumorix-launcher"
version = "0.2.0"
description = "Local-first Windows desktop game launcher."
authors = ["Lumorix"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
fs2 = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
