[package]
name = "lumorix-dropdash-app"
version = "2.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumorix_dropdash_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
